# dbt-bq-sourcegen

./: README.md  README_JA.md  pyproject.toml
.github/workflows/: ci.yml
src/dbt_bq_sourcegen/: cli.py
src/dbt_bq_sourcegen/io/: bigquery.py  yaml_handler.py
src/dbt_bq_sourcegen/logic/: merge_strategy.py  schema_diff.py  source_builder.py
src/dbt_bq_sourcegen/types/: dbt.py
tests/: test_cli_commands.py
tests/io/: test_yaml_handler.py
tests/logic/: test_merge_strategy.py
