[project]
name = "dbt-bq-sourcegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "K-Oxon", email = "ko1011qfp@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.34.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.18.14",
]

[project.scripts]
dbt-bq-sourcegen = "dbt_bq_sourcegen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_bq_sourcegen"]

[tool.hatch.version]
path = "src/dbt_bq_sourcegen/__init__.py"

[dependency-groups]
dev = ["ruff>=0.12.2"]
